<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AgricChain</string>
    <string name="crop_name">फसल का नाम / Crop Name</string>
    <string name="quantity">मात्रा (किलो) / Quantity (kg)</string>
    <string name="location">स्थान / Location</string>
    <string name="get_recommendation">सलाह पाएं / Get Recommendation</string>
    <string name="auto_detect">स्वतः पता लगाएं / Auto Detect</string>
    <string name="sell_today">आज बेचें / SELL TODAY</string>
    <string name="wait">प्रतीक्षा करें / WAIT</string>
    <string name="best_mandi">सर्वोत्तम मंडी / Best Mandi</string>
    <string name="expected_price">अपेक्षित मूल्य / Expected Price</string>
    <string name="total_profit">कुल लाभ / Total Profit</string>
    <string name="spoilage_risk">खराब होने का जोखिम / Spoilage Risk</string>
    <string name="profit_comparison">लाभ तुलना / Profit Comparison</string>
    <string name="nearest_mandi">नजदीकी मंडी / Nearest Mandi</string>
    <string name="suggested_mandi">सुझाई गई मंडी / Suggested Mandi</string>
    <string name="extra_profit">अतिरिक्त लाभ / Extra Profit</string>
    <string name="why_recommendation">यह सलाह क्यों / Why This Recommendation</string>
    <string name="speak">बोलें / Speak</string>
</resources>
